--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
 sanic==19.9.0
+beautifulsoup4==4.8.1
+requests==2.22.0
+asyncpg==0.20.0
+pypika==0.35.16
+
+pytest-sanic==1.1.2
+pytest==5.3.2
+psycopg2==2.8.4
